@@ -25,6 +25,8 @@ CVS HEAD (2007-07-02):
 * Non-ASCII characters in on-calc file names are now passed to ld-tigcc in
   urlencoded form (more portable).
 * Ctrl+Return now works for "Open file at cursor" (not just Ctrl+Numpad Enter)
+* Now generating smaller syntax highlighting descriptions for mixes of
+  case-sensitive and case-insensitive word lists (using new KatePart feature).
 
 
 KTIGCC 1.06 (2006-11-25):
