@@ -5,6 +5,8 @@ CVS ktigcc-1-branch (2007-07-02):
 * KDElibs 3.5.7 or higher are now required.
 * Ctrl+Return now works for "Open file at cursor" (not just Ctrl+Numpad Enter)
 * Fixed extra newline incorrectly added each time a file is saved.
+* Now generating smaller syntax highlighting descriptions for mixes of
+  case-sensitive and case-insensitive word lists (using new KatePart feature).
 
 
 KTIGCC 1.07 (2007-04-03):
